
- PHP-FPM SAPI:
  . Implemented FR #54499 (FPM ping and status_path should handle HEAD request). (fat)
  . Implemented FR #54172 (Overriding the pid file location of php-fpm). (fat)
  . Fixed missing Expires and Cache-Control headers for ping and status pages.
    (fat)
  . Fixed memory leak. (fat) Reported and fixed by Giovanni Giacobbi.

- SPL extension:
  . Fixed bug #54971 (Wrong result when using iterator_to_array with use_keys
    on true). (Pierrick)

16 Jun 2011, PHP 5.3.7 RC1
- Upgraded bundled SQLite to version 3.7.6.3. (Scott)
- Upgraded bundled PCRE to version 8.12. (Scott)
- Increased the backtrack limit from 100000 to 1000000 (Rasmus)

- Zend Engine:
  . Fixed bug #55007 (compiler fail after previous fail). (Felipe)
  . Fixed bug #54910 (Crash when calling call_user_func with unknown function
    name). (Dmitry)
  . Fixed bug #54804 (__halt_compiler and imported namespaces).
    (Pierrick, Felipe)
  . Fixed bug #54624 (class_alias and type hint). (Felipe)
  . Fixed bug #54585 (track_errors causes segfault). (Dmitry)
  . Fixed bug #54423 (classes from dl()'ed extensions are not destroyed). 
    (Tony, Dmitry)
  . Fixed bug #54372 (Crash accessing global object itself returned from its
    __get() handle). (Dmitry)
  . Fixed bug #54358 (Closure, use and reference). (Dmitry)
  . Fixed bug #54367 (Use of closure causes problem in ArrayAccess). (Dmitry)
  . Fixed bug #54039 (use() of static variables in lambda functions can break
     staticness). (Dmitry)
  . Fixed bug #54262 (Crash when assigning value to a dimension in a non-array).
    (Dmitry)

- Core:
  . Implemented FR #54459 (Range function accuracy). (Adam)
  . Added PHP_MANDIR constant telling where the manpages were installed into,
    and an --man-dir argument to php-config. (Hannes)

  . Fixed a crash inside dtor for error handling. (Ilia)
  . Fixed bug #54939 (File path injection vulnerability in RFC1867 File upload
    filename). (Felipe) Reported by Krzysztof Kotowicz. (CVE-2011-2202)
